# codes

./: README.md
trunk/attic/: probe.hh
trunk/codes/: CMakeLists.txt  af_packet-2.4.21  brute.c  brute.data  buffy-tune.c  buffy.c  buffy.h  colours.h  daemon.c  dante.c  dbksym.c  debug.h  dump2stat.c  dyn_caller.c  ei.c  ether-wake.c  fgets_th.c  fgets_th.h  fnv-ext.c  fnv.h  gethostbyif.c  i386-funny.c  i386-linux-short.c  i386.c  if.c  lindump.c  madljana.c  mset.c  mstack.h  mykill.c  nanolist.c  nanolist.data.c  nanolist.h  neo_getopt.c  neo_getopt.h  ns-cache.c  ns-cache.h  pcap2ixp.c  pid-utils-test.c  pid-utils.c  (+16 more)
trunk/codes++/: CMakeCache.txt  CMakeLists.txt  CTdispatcher.cc  Makefile  aggr.cpp  algorithm-test.cc  any-test.cc  any.hh  arch-cpu-test.cc  arch-cpu.hh  async_fd-test.cc  async_fd.hh  atomic-test.cc  atomic.hh  atomic_test.cc  atomicio-test.cc  atomicio.hh  atomicio_test.cc  atomicity-policy.hh  atomicity-test.cc  buffer-test.cc  buffer.hh  cache-test.cc  cache.hh  checked_delete.hh  cmake_install.cmake  collector-test.cc  collector.hh  colorful.hh  concepts-test.cc  concepts.hh  cpp_test.cc  cpufreq-test.cc  cpufreq.hh  cpuinfo.hh  cursor-test.cc  cursor.hh  cxa_demangle-test.cc  cxa_demangle.hh  cxx-idioms.cc  (+184 more)
trunk/codes++/attic/: exception.hh  factory-test.cc  probe-test.cc  singleton.hh
trunk/codes++0x/: helloworld.cc
trunk/codes.cpp/: CMakeLists.txt  CMakeLists.txt.intel  CTdispatcher.cc  aggr.cpp  algorithm-test.cc  algorithm.hh  any-test.cc  any.hh  arch-cpu-test.cc  arch-cpu.hh  async_fd-test.cc  async_fd.hh  atomic-test.cc  atomic.hh  atomicio-test.cc  atomicio.hh  atomicity-policy.hh  atomicity-test.cc  attr.hh  buffer-test.cc  buffer.hh  cache-test.cc  cache.hh  collector-test.cc  collector.hh  colorful-test.cc  colorful.hh  concepts-test.cc  concepts.hh  cpp_idioms.cc  cpp_test.cc  cpp_testrc  cpufreq-test.cc  cpufreq.hh  cpuinfo-test.cc  cpuinfo.hh  cursor-test.cc  cursor.hh  cxa_demangle-test.cc  cxa_demangle.hh  (+180 more)
trunk/codes.cpp0x/: CMakeLists.txt  algorithm-test.cpp  algorithm.hpp  any-test.cpp  any.hpp  colorful-test.cpp  colorful.hpp  cpu-cycles-test.cpp  cpu-cycles.hpp  cpufreq-test.cpp  cpufreq.hpp  cursor-test.cpp  cursor.hpp  cxa_demangle-test.cpp  cxa_demangle.hpp  double_checked_sinlegon-test.cpp  double_checked_sinlegon.hpp  entangled_ptr-test.cpp  entangled_ptr.hpp  enumap-test.cpp  enumap.hpp  errcode-test.cpp  errcode.h  error-test.cpp  error.hpp  exec-test.cpp  exec.hpp  exprtempl-test.cpp  exprtempl.hpp  factory-test.cpp  factory.hpp  format-test.cpp  format.hpp  functional-test.cpp  functional.hpp  gotopt-test-debug.cpp  gotopt-test.cpp  gotopt.hpp  helloworld.cc  iomanip-test.cpp  (+75 more)
trunk/codes.cpp11/: CMakeLists.txt  Makefile  algorithm-test.cpp  algorithm.hpp  any-test.cpp  any.hpp  binary-test.cpp  binary.hpp  buffer.hpp  byte_string-test.cpp  byte_string.hpp  cmake_install.cmake  colorful-test.cpp  colorful.hpp  cpu-cycles-test.cpp  cpu-cycles.hpp  cpufreq-test.cpp  cpufreq.hpp  currying-test.cpp  currying.hpp  cxa_demangle-test.cpp  cxa_demangle.hpp  cxxabi.hpp  double_checked_sinlegon-test.cpp  double_checked_sinlegon.hpp  endian.hpp  entangled_ptr-test.cpp  entangled_ptr.hpp  enumap-test.cpp  enumap.hpp  exec-test.cpp  exec.hpp  exprtempl-test.cpp  exprtempl.hpp  factory-test.cpp  factory.hpp  format-test.cpp  format.hpp  functional-test.cpp  functional.hpp  (+108 more)
trunk/codes.rb/: attr_setter.rb  boolean_trait.rb  cpp_render.rb  deep_clone.rb  doctor_header.rb  helloworld.rb  include_test.rb  ln.h.rb  mixin.rb  yats-run.rb
trunk/codes.sh/: cgrep  cpp_ctags.sh  cpp_ctags_system.sh  errcode.sh  g++-cute  omnicppcomplete-update-global-tags.sh
