include_directories(.)

add_executable(tuple-test tuple-test.cc)
add_executable(syslog-test syslog-test.cc syslog.cc)
add_executable(factory-test factory-test.cc)
add_executable(fast_deque-test fast_deque-test.cc)
add_executable(singleton-test singleton-test.cc)
add_executable(CTdispatcher CTdispatcher.cc)
add_executable(cxx-idioms cxx-idioms.cc)
add_executable(matrix-test matrix-test.cc)
add_executable(cache-test cache-test.cc)
add_executable(pthread-test pthread-test.cc)
add_executable(sprint2-test sprint2-test.cc)
add_executable(dump_container_test dump_container_test.cc)
add_executable(typelist-test typelist-test.cc)
add_executable(test-enable_if test-enable_if.cc)
add_executable(inotify-test inotify-test.cc)
add_executable(mmap_test mmap_test.cc)
add_executable(fnv-test fnv-test.cc)
add_executable(probe-test probe-test.cc)
add_executable(iptables-test iptables-test.cc)
add_executable(flock-test flock-test.cc)
add_executable(test-constness test-constness.cc)
add_executable(ostream_diverter-test ostream_diverter-test.cc)
add_executable(functor-test functor-test.cc)
add_executable(itoa-test itoa-test.cc)
add_executable(collector-test collector-test.cc)
add_executable(socket-test socket-test.cc)
add_executable(function-factory-test function-factory-test.cc)
add_executable(singleton_proc_test singleton_proc_test.cc)
add_executable(getopt-test getopt-test.cc)
add_executable(atomic_test atomic_test.cc)
add_executable(atomicio_test atomicio_test.cc)
add_executable(refcnt-test refcnt-test.cc)
add_executable(endianless-test endianless-test.cc)
add_executable(proxy-test proxy-test.cc)
add_executable(buffer-test buffer-test.cc)
add_executable(concepts-test concepts-test.cc)
add_executable(enumap-test enumap-test.cc)
add_executable(kv-test kv_test.cc)
add_executable(typemap-test typemap-test.cc)
add_executable(mutant-test mutant-test.cc)
add_executable(logstream-test logstream-test.cc)
add_executable(hwtmpaflntavctr hwtmpaflntavctr.cc)
add_executable(mtstream-test mtstream-test.cc)

target_link_libraries(atomic_test -pthread)
target_link_libraries(fast_deque-test -pthread)
target_link_libraries(pthread-test -pthread)
target_link_libraries(refcnt-test -pthread)
target_link_libraries(mtstream-test -pthread)
