cmake_minimum_required(VERSION 2.4)

if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    
    include(CheckIncludeFiles)
    
    CHECK_INCLUDE_FILES(pcap.h HAVE_PCAP_H)
    
    if (NOT ${HAVE_PCAP_H})
            message(FATAL_ERROR "libpcap-dev package not installed...")
    endif(NOT ${HAVE_PCAP_H})
    
endif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")

include_directories(.)

add_definitions(-D_GLIBCXX_USE_NANOSLEEP -D_GLIBCXX_USE_SCHED_YIELD)
list(APPEND CMAKE_CXX_FLAGS -std=c++0x)

if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")

        add_executable(test-algorithm algorithm-test.cpp)       
        add_executable(test-any any-test.cpp)
        add_executable(test-cpufreq cpufreq-test.cpp)
        add_executable(test-cpu-cycles cpu-cycles-test.cpp)
        add_executable(test-colorful colorful-test.cpp)
        add_executable(test-cursor cursor-test.cpp)
        add_executable(test-cxa_demangle cxa_demangle-test.cpp)
        add_executable(test-entangled_ptr entangled_ptr-test.cpp)
        add_executable(test-enumap enumap-test.cpp)
        add_executable(test-errcode errcode-test.cpp)
        add_executable(test-error error-test.cpp)
        add_executable(test-exec exec-test.cpp)                 
        add_executable(test-exprtempl exprtempl-test.cpp)
        add_executable(test-factory factory-test.cpp)
        add_executable(test-format format-test.cpp)
        add_executable(test-functional functional-test.cpp)
        add_executable(test-gotopt-test-debug gotopt-test-debug.cpp)
        add_executable(test-gotopt gotopt-test.cpp)
        add_executable(test-iomanip iomanip-test.cpp)
        add_executable(test-iovec iovec-test.cpp)
        
        add_executable(test-key_value_test key_value-test.cpp)
        add_executable(test-lexical_cast lexical_cast-test.cpp)
        add_executable(test-lockless-queue lockless_queue-test.cpp) 
        add_executable(test-logstreambuf logstreambuf-test.cpp) 
        add_executable(test-matrix matrix-test.cpp)

        add_executable(test-net-headers net-headers-test.cpp)
        add_executable(test-netdev netdev-test.cpp)
        add_executable(test-nullptr nullptr-test.cpp)
        add_executable(test-observer observer-test.cpp)
        add_executable(test-pcap-test-header pcap-test-header.cpp)   
        add_executable(test-pcap pcap-test.cpp)                 
        add_executable(test-print print-test.cpp)                 
        add_executable(test-signal_slot signal_slot-test.cpp)       
        add_executable(test-singleton singleton-test.cpp)       
        add_executable(test-socket socket-test.cpp)
        add_executable(test-spinlock spinlock-test.cpp)
        add_executable(test-static_allocator static_allocator-test.cpp)
        add_executable(test-streamer streamer-test.cpp)        
        add_executable(test-string-utils string-utils-test.cpp)
        add_executable(test-thread_interrupt thread_interrupt-test.cpp)        
        add_executable(test-timeval timeval-test.cpp)
        add_executable(test-tuplarr tuplarr-test.cpp)            
        add_executable(test-typelist typelist-test.cpp)
        add_executable(test-typemap typemap-test.cpp)
        add_executable(test-type_traits_test type_traits-test.cpp)   
        add_executable(test-value_ptr value_ptr-test.cpp)
        add_executable(test-variant variant-test.cpp)
        add_executable(test-yats yats-test.cpp)

target_link_libraries(test-cpufreq -lcpufreq)
target_link_libraries(test-pcap -lpcap)
target_link_libraries(test-pcap-test-header -lpcap)
target_link_libraries(test-lockless-queue -pthread)
target_link_libraries(test-spinlock -pthread)

endif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
