cmake_minimum_required(VERSION 2.4)

add_definitions(-DTEST -DTEST_FNV -DIFBROWSER -DRING_TEST -DTEST_SALLOC)

include_directories(.)

#add_executable(yaccp-test yacpp-test.cc)

add_executable(buffy buffy.c)
add_executable(buffy-tune buffy-tune.c)
add_executable(daemon daemon.c)
add_executable(dante dante.c)
add_executable(dbksym dbksym.c)
add_executable(dump2stat dump2stat.c)
add_executable(ether-wake ether-wake.c)
add_executable(fgets_th fgets_th.c)
add_executable(fnv-ext fnv-ext.c)
add_executable(gethostbyif gethostbyif.c)
add_executable(i386 i386.c)
add_executable(i386-funny i386-funny.c)
add_executable(i386-linux-short i386-linux-short.c)
add_executable(if if.c)
add_executable(lindump lindump.c)
#add_executable(madljana madljana.c)
#add_executable(mset mset.c)
add_executable(mykill mykill.c)
add_executable(nanolist nanolist.c)
#add_executable(nanolist.data nanolist.data.c)
add_executable(neo_getopt neo_getopt.c)
add_executable(pcap2ixp pcap2ixp.c)
add_executable(pid-utils-test pid-utils-test.c pid-utils.c)
#add_executable(proc proc.c)
add_executable(proxed proxed.c)
add_executable(qhash qhash.c)
add_executable(radix_superb radix_superb.c)
add_executable(respawn respawn.c)
add_executable(ring ring.c)
add_executable(salloc salloc.c)
#add_executable(syncro syncro.c)
add_executable(timedsystem timedsystem.c)
add_executable(usr8550 usr8550.c)


target_link_libraries(nanolist -ldl)
target_link_libraries(proxed -pthread)
target_link_libraries(qhash -ldl -lm)
